add more definitions

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,34 @@ h3:hover {
   height: 300px;
 }
 
-.definition {
+.definitionJS {
+  display: none;
+}
+
+.definitionOP {
+  display: none;
+}
+
+.definitionVA {
+  display: none;
+}
+
+.definitionVN {
+  display: none;
+}
+
+.definitionFU {
+  display: none;
+}
+
+.definitionMT {
+  display: none;
+}
+
+.definitionAR {
+  display: none;
+}
+
+.definitionPR {
   display: none;
 }
